--- a/noir-caffe/perfil.html
+++ b/noir-caffe/perfil.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil - Noir Caffe</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <header>
         <h1>Noir Caffe</h1>
         <nav>
             <ul>
-                <li><a href="home.html">Início</a></li>
+                <li><a href="">Início</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
                 <li><a href="#">Configurações</a></li>
                 <li><a href="#">Sair</a></li>
             </ul>
