--- a/noir-caffe/home.html
+++ b/noir-caffe/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja Online Noir Caffe</title>
-    <link rel="stylesheet" href="home.html">
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
     <header>
